sglang.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sglang
  labels:
    obj: sglang-deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sglang
  template:
    metadata:
      labels:
        app: sglang
        model: meta-llama-31-8b-instruct
        engine: sglang
    spec:
      tolerations:
      - key: "nvidia.com/gpu"
        operator: "Equal"
        effect: "NoSchedule"
      hostIPC: true
      restartPolicy: Always
      containers:
        - name: sglang
          image: docker.io/lmsysorg/sglang:latest
          imagePullPolicy: Always  # IfNotPresent or Never
          ports:
            - containerPort: 30000
          command: ["python3", "-m", "sglang.launch_server"]
          args: ["--model-path", "meta-llama/Llama-3.1-8B-Instruct", "--host", "0.0.0.0", "--port", "30000"]
          resources:
            requests:
              nvidia.com/gpu: 1
            limits:
              nvidia.com/gpu: 1
          volumeMounts:
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
          livenessProbe:
            httpGet:
              path: /health
              port: 30000
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: localtime
          hostPath:
            path: /etc/localtime
            type: File
---
apiVersion: v1
kind: Service
metadata:
  name: sglang
  labels:
    obj: sglang-service
spec:
  selector:
    app: sglang
  ports:
    - protocol: TCP
      port: 80  # port on host
      targetPort: 30000  # port in container
      name: http
  type: ClusterIP
